# SCREEN_BUDDY

./: .env.example  .env.production  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
scripts/: fetch-ffmpeg.md
src/: AgentRunPanel.tsx  App.tsx  Layout.tsx  NavRail.tsx  SplashLogin.tsx  activeRun.tsx  index.css  lib.ts  main.tsx  schedules.ts  ui.tsx  useScheduler.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: README.md  SOURCE.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  artifacts.rs  capture.rs  computer.rs  credentials.rs  lib.rs  main.rs  permissions.rs  pinned.rs  remote.rs  video.rs  window.rs
src/hooks/: useGoogleAuth.ts
src/views/: Artifacts.tsx  Credentials.tsx  CronBuilder.tsx  Dashboard.tsx  History.tsx  NewRun.tsx  PinnedLibrary.tsx  RunDetail.tsx  RunsTabs.tsx  ScheduleDetail.tsx  ScheduleFireModal.tsx  Scheduled.tsx  Settings.tsx  Templates.tsx
